--- a/tests/testrunner.htm
+++ b/tests/testrunner.htm
@@ -18,7 +18,7 @@
 
 		<div id="mocha">
 			<p>
-				<a href=".">Index</a>
+				<a href="./testrunner.htm">Index</a>
 			</p>
 		</div>
 		<div id="messages"></div>
